Added a diag to check vorticity conservation

--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -222,9 +222,10 @@
     "    q['dErdt']             = np.gradient(q['Er'],q['time'],axis=0)\n",
     "    q['dIsqdr']            = np.gradient(q['turb_int_sq_avg'],q['rg'],axis=1)\n",
     "    q['dIdr']              = np.gradient(np.sqrt(q['turb_int_sq_avg']),q['rg'],axis=1)\n",
-    "    q['Jr']                = -(q['Gamma_vE']+q['Gamma_vD'])\n",
-    "    q['Jr_vD']             = -q['Gamma_vD']\n",
-    "    q['Jr_vE']             = -q['Gamma_vE']\n",
+    "    q['Jr']                = (q['Gamma_vE']+q['Gamma_vD'])\n",
+    "    q['Jr_vD']             = q['Gamma_vD']\n",
+    "    q['Jr_vE']             = q['Gamma_vE']\n",
+    "    q['vorticity']         = (q['n'] * q['Er'] - 0.5 * np.gradient(q['Pperp'],q['rg'],axis=1))\n",
     "    q['neo_energy_evol']   = -q['Ptransfert'] + 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
     "    q['neo_energy_evol_w_prefactor'] = -q['Ptransfert_w_prefactor'] + 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
     "    q['tevol_VEsq']        = 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)"
@@ -1425,11 +1426,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "686d13f9-c65d-4ad8-86b3-ac95011f2274",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06b3243ef4e34e1db0a198993cf43585",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=100, description='dpi_adjust', max=200, min=30), FloatSlider(value=90000…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(dpi_adjust, float_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, q05br_bool, q075br_bool, q15br_bool)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.close('all')\n",
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.figsize'] = [10, 10] # for square canvas\n",
+    "matplotlib.rcParams['figure.subplot.left'] = 0\n",
+    "matplotlib.rcParams['figure.subplot.bottom'] = 0.5\n",
+    "matplotlib.rcParams['figure.subplot.right'] = 1\n",
+    "matplotlib.rcParams['figure.subplot.top'] = 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def update_plot(dpi_adjust,float_time,\n",
+    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,\n",
+    "               q05br_bool,q075br_bool,q15br_bool):\n",
+    "    \n",
+    "    plt.close('all')\n",
+    "\n",
+    "    q_ar = [qprof for qprof, qprof_bool in zip(all_sim, [q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool,q075br_bool,q15br_bool]) if qprof_bool]\n",
+    "    \n",
+    "    fig = plt.figure(figsize=(12,6*len(q_ar)))\n",
+    "\n",
+    "    tscan = float_time\n",
+    "\n",
+    "    ## Set dpi of figure\n",
+    "    if dpi_adjust!=dpi_custom:fig.set_dpi(dpi_adjust)\n",
+    "    \n",
+    "    for iq,q in enumerate(q_ar):\n",
+    "\n",
+    "        ax_rprof = fig.add_subplot(len(q_ar),1,iq+1)\n",
+    "\n",
+    "        irhomin = (np.abs(q['rho'] - 0.4 )).argmin()\n",
+    "        irhomax = (np.abs(q['rho'] - 1.0 )).argmin()\n",
+    "        \n",
+    "        itscan = (np.abs(q['time'] - tscan )).argmin()\n",
+    "        \n",
+    "        dt_vorticity = np.gradient(q['vorticity'],q['time'],axis=0)\n",
+    "\n",
+    "        ax_rprof.set_title(q['title'] + r' - at t$[\\omega_{c0}^{-1}] =$  %.0f' % (tscan) )\n",
+    "        #ax_rprof.plot(q['rho'][irhomin:irhomax], dt_vorticity[itscan,irhomin:irhomax],ls=q['ls'],c='b',label=r'$P$')\n",
+    "        #ax_rprof.plot(q['rho'][irhomin:irhomax], -q['Jr'][itscan,irhomin:irhomax],ls=q['ls'],c='r',label=r'-$J_r$')\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], (dt_vorticity+q['Jr'])[itscan,irhomin:irhomax],ls=q['ls'],c='r',label=r'Error')\n",
+    "        ax_rprof.set_xlabel(r'$r/a$')\n",
+    "        ax_rprof.axhline(y=0,c='k',ls='--')\n",
+    "        ax_rprof.axvline(x=1,c='k',ls='--')\n",
+    "        ax_rprof.legend()\n",
+    "\n",
+    "        ax_rprof.set_ylim(-8e-6,8e-6)\n",
+    "\n",
+    "    fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
+    "    \n",
+    "    \n",
+    "float_time_slider = widgets.FloatSlider(value=90e3, min=0, max=150e3, step=1000, description='Time range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
+    "\n",
+    "for q in all_sim:\n",
+    "    q['bool_display'] = widgets.Checkbox(value=True,description=q['title'])\n",
+    "\n",
+    "qdisplay = (q['bool_display'] for q in all_sim)\n",
+    "\n",
+    "interact(update_plot, \n",
+    "         float_time=float_time_slider,\n",
+    "         dpi_adjust=widgets.IntSlider(min=30, max=200, step=1,value=dpi_custom),\n",
+    "         param = widgets.Text(value='Er',placeholder='Type something',description='Select parameter:'),\n",
+    "         q05_bool    = widgets.Checkbox(value=True,description='q05'),\n",
+    "         q1_bool     = widgets.Checkbox(value=False,description='q1'),\n",
+    "         q15_bool    = widgets.Checkbox(value=True,description='q15'),\n",
+    "         q05n0_bool  = widgets.Checkbox(value=False,description='q05n0'),\n",
+    "         q15n0_bool  = widgets.Checkbox(value=False,description='q15n0'),\n",
+    "         q05new_bool = widgets.Checkbox(value=False,description='q05new'),\n",
+    "         q05br_bool = widgets.Checkbox(value=False,description='q05br'),\n",
+    "         q075br_bool = widgets.Checkbox(value=False,description='q075br'),\n",
+    "         q15br_bool = widgets.Checkbox(value=False,description='q15br')\n",
+    "        )"
+   ]
   },
   {
    "attachments": {},
@@ -3203,7 +3303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
