--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -146,8 +146,6 @@
     "\n",
     "qprof_05_n0 = hdf5_to_dict('data/TS45511_q05_n0.hdf5'); qprof_05_n0['title']=r'$q_{0.5}$ - $n=0$'; qprof_05_n0['c']='xkcd:cobalt blue'; qprof_05_n0['ls']='-'\n",
     "qprof_15_n0 = hdf5_to_dict('data/TS45511_q15_n0.hdf5'); qprof_15_n0['title']=r'$q_{1.5}$ - $n=0$'; qprof_15_n0['c']='xkcd:dark red'; qprof_15_n0['ls']='-'\n",
-    "\n",
-    "#qprof_gdp = pickle.load(open('data/gdp_ti0_te597900.pkl','rb')); qprof_gdp['title']=r'gdp'; qprof_gdp['c']='darkorange'\n",
     "\n",
     "qprof_05new = hdf5_to_dict('data/TS45511_q05new.hdf5'); qprof_05new['title']=r'$q_{0.5}^{NEW}$'; qprof_05new['c']='xkcd:lightish blue'; qprof_05new['ls']='-'\n",
     "\n",
@@ -197,17 +195,13 @@
     "qprof_15['c3'] = 'xkcd:cerulean'\n",
     "qprof_15['c4'] = 'xkcd:darkish green'\n",
     "    \n",
-    "#q_ar = [qprof_05,qprof_1,qprof_15,qprof_05_n0,qprof_15_n0,qprof_05new]\n",
     "## Check length of arrays and correct if necessary\n",
     "for iq,q in enumerate(all_sim):\n",
     "    #print('Time array length = %s' % len(q['time']) )\n",
     "    for p in q.keys():\n",
     "        if type(q[p]) is np.ndarray:\n",
     "            if q[p].ndim == 2:\n",
-    "                #if len(q[p][:,0]) != len(q['time']):\n",
-    "                    #print('Time dimension length of %s = %s' % (p,len(q[p][:,0])) )\n",
     "                if len(q[p][:,0]) == len(q['time']):\n",
-    "                    #print('Time dimension length of %s = %s' % (p,len(q[p][:,0])) )\n",
     "                    q[p] = q[p][:-1,:]\n",
     "    q['time'] = q['time'][:-1]\n",
     "    \n",
@@ -225,7 +219,8 @@
     "    q['Jr']                = (q['Gamma_vE']+q['Gamma_vD'])\n",
     "    q['Jr_vD']             = q['Gamma_vD']\n",
     "    q['Jr_vE']             = q['Gamma_vE']\n",
-    "    q['vorticity']         = (q['n'] * q['Er'] - 0.5 * np.gradient(q['Pperp'],q['rg'],axis=1))\n",
+    "    q['P']                 = (q['n'] * q['Er'] - 0.5 * np.gradient(q['Pperp'],q['rg'],axis=1))\n",
+    "    q['vorticity']         = np.gradient(q['P'],q['rg'],axis=1)\n",
     "    q['neo_energy_evol']   = -q['Ptransfert'] + 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
     "    q['neo_energy_evol_w_prefactor'] = -q['Ptransfert_w_prefactor'] + 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
     "    q['tevol_VEsq']        = 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)"
@@ -1426,14 +1421,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "686d13f9-c65d-4ad8-86b3-ac95011f2274",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06b3243ef4e34e1db0a198993cf43585",
+       "model_id": "fc10b2c44fba40199c12332490499f32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1450,23 +1445,13 @@
        "<function __main__.update_plot(dpi_adjust, float_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, q05br_bool, q075br_bool, q15br_bool)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "plt.close('all')\n",
-    "\n",
-    "import matplotlib\n",
-    "matplotlib.rcParams['figure.figsize'] = [10, 10] # for square canvas\n",
-    "matplotlib.rcParams['figure.subplot.left'] = 0\n",
-    "matplotlib.rcParams['figure.subplot.bottom'] = 0.5\n",
-    "matplotlib.rcParams['figure.subplot.right'] = 1\n",
-    "matplotlib.rcParams['figure.subplot.top'] = 1\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "def update_plot(dpi_adjust,float_time,\n",
     "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,\n",
@@ -1476,16 +1461,18 @@
     "\n",
     "    q_ar = [qprof for qprof, qprof_bool in zip(all_sim, [q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool,q075br_bool,q15br_bool]) if qprof_bool]\n",
     "    \n",
-    "    fig = plt.figure(figsize=(12,6*len(q_ar)))\n",
+    "    fig = plt.figure(figsize=(15,4*len(q_ar)))\n",
     "\n",
     "    tscan = float_time\n",
+    "\n",
+    "    fig.suptitle('Time : %.0f' % (tscan) + r' $[\\omega_{c0}^{-1}]$')\n",
     "\n",
     "    ## Set dpi of figure\n",
     "    if dpi_adjust!=dpi_custom:fig.set_dpi(dpi_adjust)\n",
     "    \n",
     "    for iq,q in enumerate(q_ar):\n",
     "\n",
-    "        ax_rprof = fig.add_subplot(len(q_ar),1,iq+1)\n",
+    "        ax_rprof = fig.add_subplot(len(q_ar),2,2*iq+1)\n",
     "\n",
     "        irhomin = (np.abs(q['rho'] - 0.4 )).argmin()\n",
     "        irhomax = (np.abs(q['rho'] - 1.0 )).argmin()\n",
@@ -1493,17 +1480,29 @@
     "        itscan = (np.abs(q['time'] - tscan )).argmin()\n",
     "        \n",
     "        dt_vorticity = np.gradient(q['vorticity'],q['time'],axis=0)\n",
+    "        div_Jr = np.gradient(q['Jr'],q['rg'],axis=1)\n",
     "\n",
-    "        ax_rprof.set_title(q['title'] + r' - at t$[\\omega_{c0}^{-1}] =$  %.0f' % (tscan) )\n",
-    "        #ax_rprof.plot(q['rho'][irhomin:irhomax], dt_vorticity[itscan,irhomin:irhomax],ls=q['ls'],c='b',label=r'$P$')\n",
-    "        #ax_rprof.plot(q['rho'][irhomin:irhomax], -q['Jr'][itscan,irhomin:irhomax],ls=q['ls'],c='r',label=r'-$J_r$')\n",
-    "        ax_rprof.plot(q['rho'][irhomin:irhomax], (dt_vorticity+q['Jr'])[itscan,irhomin:irhomax],ls=q['ls'],c='r',label=r'Error')\n",
-    "        ax_rprof.set_xlabel(r'$r/a$')\n",
-    "        ax_rprof.axhline(y=0,c='k',ls='--')\n",
-    "        ax_rprof.axvline(x=1,c='k',ls='--')\n",
-    "        ax_rprof.legend()\n",
+    "        ax_rprof.set_title(q['title'] + ' - Vorticity')\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], dt_vorticity[itscan,irhomin:irhomax],ls=q['ls'],c='b',label=r'$\\partial_t \\langle \\Omega \\rangle$')\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], -div_Jr[itscan,irhomin:irhomax],ls=q['ls'],c='r',label=r'-$\\langle J_r \\rangle$')\n",
+    "        #ax_rprof.plot(q['rho'][irhomin:irhomax], (dt_vorticity+q['Jr'])[itscan,irhomin:irhomax],ls=q['ls'],c='r',label=r'Error')\n",
+    "        ax_rprof.set_ylim(-4e-6,4e-6)\n",
     "\n",
-    "        ax_rprof.set_ylim(-8e-6,8e-6)\n",
+    "        ax_rprof2 = fig.add_subplot(len(q_ar),2,2*iq+2)\n",
+    "        \n",
+    "        dt_P = np.gradient(q['P'],q['time'],axis=0)\n",
+    "\n",
+    "        ax_rprof2.set_title(q['title'] + ' - Integrated vorticity')\n",
+    "        ax_rprof2.plot(q['rho'][irhomin:irhomax], dt_P[itscan,irhomin:irhomax],ls=q['ls'],c='b',label=r'$\\partial_t \\langle P \\rangle$')\n",
+    "        ax_rprof2.plot(q['rho'][irhomin:irhomax], -q['Jr'][itscan,irhomin:irhomax],ls=q['ls'],c='r',label=r'-$\\langle J_r \\rangle $')\n",
+    "        #ax_rprof.plot(q['rho'][irhomin:irhomax], (dt_vorticity+q['Jr'])[itscan,irhomin:irhomax],ls=q['ls'],c='r',label=r'Error')\n",
+    "        ax_rprof2.set_ylim(-1e-5,1e-5)\n",
+    "\n",
+    "        for axes in [ax_rprof,ax_rprof2]:\n",
+    "            axes.set_xlabel(r'$r/a$')\n",
+    "            axes.axhline(y=0,c='k',ls='--')\n",
+    "            axes.axvline(x=1,c='k',ls='--')\n",
+    "            if iq==0:axes.legend()\n",
     "\n",
     "    fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "    \n",
@@ -1519,15 +1518,15 @@
     "         float_time=float_time_slider,\n",
     "         dpi_adjust=widgets.IntSlider(min=30, max=200, step=1,value=dpi_custom),\n",
     "         param = widgets.Text(value='Er',placeholder='Type something',description='Select parameter:'),\n",
-    "         q05_bool    = widgets.Checkbox(value=True,description='q05'),\n",
+    "         q05_bool    = widgets.Checkbox(value=False,description='q05'),\n",
     "         q1_bool     = widgets.Checkbox(value=False,description='q1'),\n",
-    "         q15_bool    = widgets.Checkbox(value=True,description='q15'),\n",
+    "         q15_bool    = widgets.Checkbox(value=False,description='q15'),\n",
     "         q05n0_bool  = widgets.Checkbox(value=False,description='q05n0'),\n",
     "         q15n0_bool  = widgets.Checkbox(value=False,description='q15n0'),\n",
     "         q05new_bool = widgets.Checkbox(value=False,description='q05new'),\n",
-    "         q05br_bool = widgets.Checkbox(value=False,description='q05br'),\n",
-    "         q075br_bool = widgets.Checkbox(value=False,description='q075br'),\n",
-    "         q15br_bool = widgets.Checkbox(value=False,description='q15br')\n",
+    "         q05br_bool  = widgets.Checkbox(value=True,description='q05br'),\n",
+    "         q075br_bool = widgets.Checkbox(value=True,description='q075br'),\n",
+    "         q15br_bool  = widgets.Checkbox(value=True,description='q15br')\n",
     "        )"
    ]
   },
