--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -46,7 +46,6 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "import matplotlib.gridspec as gridspec\n",
     "from scipy.ndimage.filters import uniform_filter1d, gaussian_filter1d\n",
     "\n",
@@ -56,7 +55,7 @@
     "## Set up rc\n",
     "plt.rcParams['image.cmap'] = 'RdYlBu_r'\n",
     "plt.rcParams['axes.formatter.limits'] = (-3,1)\n",
-    "plt.rcParams['lines.linewidth'] = 2\n",
+    "plt.rcParams['lines.linewidth'] = 2.5\n",
     "plt.rcParams.update({\"axes.grid\" : True})\n",
     "plt.rcParams['lines.markersize'] = 8\n",
     "plt.rcParams['lines.markeredgecolor'] = 'k'\n",
@@ -65,9 +64,7 @@
     "me = (0.1,0.1) #Markevery\n",
     "\n",
     "#Size of figures\n",
-    "dpi_laptop = 50\n",
-    "dpi_cadarache = 65\n",
-    "dpi_home = 100\n",
+    "dpi_laptop = 50; dpi_cadarache = 65; dpi_home = 100\n",
     "dpi_custom = dpi_home"
    ]
   },
@@ -83,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 80,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -118,90 +115,73 @@
     "    return d\n",
     "\n",
     "# First simulations\n",
-    "qprof_05 = hdf5_to_dict('data/TS45511_q05.hdf5'); qprof_05['title']=r'$q_{0.5}$'; qprof_05['c']='xkcd:electric blue'; qprof_05['ls']='-'\n",
-    "qprof_1  = hdf5_to_dict('data/TS45511_q1.hdf5'); qprof_1['title']=r'$q_{1.0}$'; qprof_1['c']='xkcd:bluish purple'; qprof_1['ls']='-'\n",
-    "qprof_15 = hdf5_to_dict('data/TS45511_q15.hdf5'); qprof_15['title']=r'$q_{1.5}$'; qprof_15['c']='xkcd:watermelon'; qprof_15['ls']='-'\n",
+    "qprof_05 = hdf5_to_dict('data/TS45511_q05.hdf5'); qprof_05['title'] = r'$q_{ref} \\times 0.5$'; qprof_05['c'] = 'xkcd:electric blue' ; qprof_05['ls']='-'\n",
+    "qprof_1  = hdf5_to_dict('data/TS45511_q1.hdf5') ; qprof_1['title']  = r'$q_{ref}$'           ; qprof_1['c']  = 'xkcd:bluish purple' ; qprof_1['ls']='-'\n",
+    "qprof_15 = hdf5_to_dict('data/TS45511_q15.hdf5'); qprof_15['title'] = r'$q_{ref} \\times 1.5$'; qprof_15['c'] = 'xkcd:watermelon'    ; qprof_15['ls']='-'\n",
     "\n",
     "# Simulations without turbulence, only toroidal n=0 mode kept\n",
-    "qprof_05_n0 = hdf5_to_dict('data/TS45511_q05_n0.hdf5'); qprof_05_n0['title']=r'$q_{0.5}$ - $n=0$'; qprof_05_n0['c']='xkcd:cobalt blue'; qprof_05_n0['ls']='-'\n",
-    "qprof_15_n0 = hdf5_to_dict('data/TS45511_q15_n0.hdf5'); qprof_15_n0['title']=r'$q_{1.5}$ - $n=0$'; qprof_15_n0['c']='xkcd:dark red'; qprof_15_n0['ls']='-'\n",
+    "qprof_05_n0 = hdf5_to_dict('data/TS45511_q05_n0.hdf5'); qprof_05_n0['title']=r'$q_{ref} \\times 0.5$ - $n=0$'; qprof_05_n0['c']='xkcd:cobalt blue'; qprof_05_n0['ls']='-'\n",
+    "qprof_15_n0 = hdf5_to_dict('data/TS45511_q15_n0.hdf5'); qprof_15_n0['title']=r'$q_{ref} \\times 1.5$ - $n=0$'; qprof_15_n0['c']='xkcd:dark red'; qprof_15_n0['ls']='-'\n",
     "\n",
     "# Redo of first simulations with better time resolution\n",
-    "qprof_05_br  = hdf5_to_dict('data/TS45511_q05_br.hdf5'); qprof_05_br['title']=r'$q_{0.5}^{BR}$'; qprof_05_br['c']='xkcd:blue'; qprof_05_br['ls']='-'\n",
-    "qprof_075_br = hdf5_to_dict('data/TS45511_q075_br.hdf5'); qprof_075_br['title']=r'$q_{0.75}^{BR}$'; qprof_075_br['c']='xkcd:pink'; qprof_075_br['ls']='-'\n",
-    "qprof_15_br  = hdf5_to_dict('data/TS45511_q15_br.hdf5'); qprof_15_br['title']=r'$q_{1.5}^{BR}$'; qprof_15_br['c']='xkcd:red'; qprof_15_br['ls']='-'\n",
+    "qprof_05_br  = hdf5_to_dict('data/TS45511_q05_br.hdf5') ; qprof_05_br['title'] =r'$q_{ref}^{BR} \\times 0.5$' ; qprof_05_br['c']='xkcd:blue' ; qprof_05_br['ls']='-'\n",
+    "qprof_075_br = hdf5_to_dict('data/TS45511_q075_br.hdf5'); qprof_075_br['title']=r'$q_{ref}^{BR} \\times 0.75$'; qprof_075_br['c']='xkcd:pink'; qprof_075_br['ls']='-'\n",
+    "qprof_15_br  = hdf5_to_dict('data/TS45511_q15_br.hdf5') ; qprof_15_br['title'] =r'$q_{ref}^{BR} \\times 1.5$' ; qprof_15_br['c']='xkcd:red'  ; qprof_15_br['ls']='-'\n",
     "\n",
     "all_sim = [qprof_05, qprof_1, qprof_15, qprof_05_n0, qprof_15_n0, qprof_05_br, qprof_075_br, qprof_15_br]\n",
     "\n",
-    "print(qprof_05_br.keys())\n",
+    "print(qprof_15_br.keys())\n",
     "\n",
     "## Add markers entry to each dictionnary\n",
     "marker_ar = ['o', 's', 'v', 'D', 'P', 'X', 'd', 'p', 'x']\n",
     "for iq,q in enumerate(all_sim):\n",
     "    q['marker'] = marker_ar[iq]\n",
     "\n",
-    "daltonian = 0\n",
-    "if daltonian:\n",
-    "    import seaborn as sns\n",
-    "    qprof_05['c']= sns.color_palette(\"colorblind\")[0]\n",
-    "    qprof_1['c'] = sns.color_palette(\"colorblind\")[2]\n",
-    "    qprof_15['c']= sns.color_palette(\"colorblind\")[3]\n",
-    "    \n",
-    "    qprof_05_n0['c']= sns.color_palette(\"colorblind\")[0]\n",
-    "    qprof_15_n0['c']= sns.color_palette(\"colorblind\")[3]\n",
+    "## Set colors\n",
+    "import seaborn as sns\n",
+    "palette = [\"bright\", \"dark\"]\n",
     "\n",
-    "iaea = 0\n",
-    "if iaea:\n",
-    "    qprof_05['c']= 'xkcd:blue'\n",
-    "    qprof_1['c'] = 'xkcd:green'\n",
-    "    qprof_15['c']= 'xkcd:black'\n",
-    "    \n",
-    "soutenance = 1\n",
-    "if soutenance:\n",
-    "    qprof_05['title'] = r'$q_{ref} \\times 0.5$'\n",
-    "    qprof_1['title']  = r'$q_{ref}$'\n",
-    "    qprof_15['title'] = r'$q_{ref} \\times 1.5$'\n",
-    "    \n",
+    "qprof_05_br['c']  = sns.color_palette(palette[0],4)[0]; qprof_05['c'] = sns.color_palette(palette[0],4)[0] ; qprof_05_n0['c']  = sns.color_palette(palette[1],4)[0];\n",
+    "qprof_075_br['c'] = sns.color_palette(palette[0],4)[1]\n",
+    "qprof_1['c']      = sns.color_palette(palette[0],4)[2]\n",
+    "qprof_15_br['c']  = sns.color_palette(palette[0],4)[3]; qprof_15['c'] = sns.color_palette(palette[0],4)[3] ; qprof_15_n0['c']  = sns.color_palette(palette[1],4)[3]\n",
+    "\n",
     "## Colors\n",
     "qprof_05['c2'] = 'xkcd:cornflower blue'\n",
-    "qprof_05['c3'] = 'xkcd:apple green'\n",
-    "qprof_05['c4'] = 'xkcd:melon'\n",
     "qprof_1['c2'] = 'xkcd:grassy green'\n",
-    "qprof_1['c3'] = 'xkcd:carmine'\n",
-    "qprof_1['c4'] = 'xkcd:strong blue'\n",
     "qprof_15['c2'] = 'xkcd:reddish'\n",
-    "qprof_15['c3'] = 'xkcd:cerulean'\n",
-    "qprof_15['c4'] = 'xkcd:darkish green'\n",
     "    \n",
     "## Check length of arrays and correct if necessary\n",
-    "for iq,q in enumerate(all_sim):\n",
-    "    #print('Time array length = %s' % len(q['time']) )\n",
-    "    for p in q.keys():\n",
-    "        if type(q[p]) is np.ndarray:\n",
-    "            if q[p].ndim == 2:\n",
-    "                if len(q[p][:,0]) == len(q['time']):\n",
-    "                    q[p] = q[p][:-1,:]\n",
-    "    q['time'] = q['time'][:-1]\n",
+    "if 0: ## To be removed is the problem doesn't persist\n",
+    "    for iq,q in enumerate(all_sim):\n",
+    "        #print('Time array length = %s' % len(q['time']) )\n",
+    "        for p in q.keys():\n",
+    "            if type(q[p]) is np.ndarray:\n",
+    "                if q[p].ndim == 2:\n",
+    "                    if len(q[p][:,0]) == len(q['time']):\n",
+    "                        q[p] = q[p][:-1,:]\n",
+    "        q['time'] = q['time'][:-1]\n",
     "    \n",
     "## Defining custom values\n",
     "for iq,q in enumerate(all_sim):\n",
-    "    q['gradT']             = np.gradient(q['T'],q['rg'],axis=1)\n",
-    "    q['Ptransfert']        = -q['dRSpoldr'] * (-q['Er'])\n",
     "    q['Ptransfert_w_prefactor']  = -q['dRSpoldr'] * (-q['Er']) / (1 + 2 * q['q']**2)\n",
-    "    q['Ptransfert_vE']     = -np.gradient(q['RSpol_vE'],q['rg'],axis=1) * (-q['Er'])\n",
-    "    q['Ptransfert_vD']     = -np.gradient(q['RSpol_vD'],q['rg'],axis=1) * (-q['Er'])\n",
-    "    q['Ptransfert_approx'] = q['RSpol'] * (-q['dErdr'])\n",
-    "    q['dErdt']             = np.gradient(q['Er'],q['time'],axis=0)\n",
-    "    # q['dIsqdr']            = np.gradient(q['turb_int_sq_avg'],q['rg'],axis=1)\n",
-    "    # q['dIdr']              = np.gradient(np.sqrt(q['turb_int_sq_avg']),q['rg'],axis=1)\n",
     "    q['Jr']                = (q['Gamma_vE']+q['Gamma_vD'])\n",
     "    q['Jr_vD']             = q['Gamma_vD']\n",
     "    q['Jr_vE']             = q['Gamma_vE']\n",
-    "    q['P']                 = (q['n'] * q['Er'] - 0.5 * np.gradient(q['Pperp'],q['rg'],axis=1))\n",
-    "    q['vorticity']         = np.gradient(q['P'],q['rg'],axis=1)\n",
     "    q['neo_energy_evol']   = -q['Ptransfert'] + 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
     "    q['neo_energy_evol_w_prefactor'] = -q['Ptransfert_w_prefactor'] + 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
-    "    q['tevol_VEsq']        = 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)"
+    "    q['tevol_VEsq']        = 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
+    "    ## To be removed after verification that there is no conflict\n",
+    "    # q['gradT']             = np.gradient(q['T'],q['rg'],axis=1)\n",
+    "    # q['Ptransfert']        = -q['dRSpoldr'] * (-q['Er'])\n",
+    "    # q['P']                 = (q['n'] * q['Er'] - 0.5 * np.gradient(q['Pperp'],q['rg'],axis=1))\n",
+    "    # q['vorticity']         = np.gradient(q['P'],q['rg'],axis=1)\n",
+    "    # q['Ptransfert_vE']     = -np.gradient(q['RSpol_vE'],q['rg'],axis=1) * (-q['Er'])\n",
+    "    # q['Ptransfert_vD']     = -np.gradient(q['RSpol_vD'],q['rg'],axis=1) * (-q['Er'])\n",
+    "    # q['Ptransfert_approx'] = q['RSpol'] * (-q['dErdr'])\n",
+    "    # q['dErdt']             = np.gradient(q['Er'],q['time'],axis=0)\n",
+    "    # q['dIsqdr']            = np.gradient(q['turb_int_sq_avg'],q['rg'],axis=1)\n",
+    "    # q['dIdr']              = np.gradient(np.sqrt(q['turb_int_sq_avg']),q['rg'],axis=1)"
    ]
   },
   {
@@ -262,14 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 81,
    "id": "280898b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ae87b0a4daa4e3ca376e19586884b39",
+       "model_id": "354b6becf22447409d01cc7ac3f314f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,7 +263,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54e9cd0920a0474794ae9dea916e6071",
+       "model_id": "b572c1295d9144be91e92f8ee9ea6b66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,7 +280,7 @@
        "<function __main__.update_plot(N, dpi_adjust, param, param2, float_range_time, select_sim)>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,6 +297,9 @@
     "    q_ar = [q for q in all_sim if q['title'] in select_sim]\n",
     "    tmin_avg,tmax_avg = float_range_time\n",
     "    \n",
+    "    color1 = 'xkcd:cerulean'\n",
+    "    color2 = 'xkcd:reddish orange'\n",
+    "\n",
     "    ## Set dpi of figure\n",
     "    fig.set_dpi(dpi_adjust)\n",
     "\n",
@@ -337,26 +320,25 @@
     "        p_ma = uniform_filter1d(uniform_filter1d(q[param],size=N,axis=1),size=N,axis=1)\n",
     "\n",
     "        ax_rprof.plot(q['rho'][irhomin:irhomax], np.mean( p_ma[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c'],label=q['title'])\n",
-    "        ax_rprof.set_xlabel(r'$r/a$')\n",
-    "        ax_rprof.axhline(y=0,c='k',ls='--')\n",
-    "        ax_rprof.axvline(x=1,c='k',ls='--')\n",
-    "        ax_rprof.legend()\n",
-    "        \n",
-    "        if param2:\n",
-    "            color1 = 'xkcd:cerulean'\n",
-    "            color2 = 'xkcd:reddish orange'\n",
-    "            p_ma2 = uniform_filter1d(uniform_filter1d(q[param2],size=N,axis=1),size=N,axis=1)\n",
-    "            \n",
-    "            ax_rprof2.plot(q['rho'][irhomin:irhomax], np.mean( p_ma2[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c2'],label=q['title'])\n",
-    "            ax_rprof2.yaxis.label.set_color(color2)\n",
-    "            ax_rprof2.tick_params(axis='y', colors=color2)\n",
-    "        \n",
     "        ax_rprof.plot(q['rho'][10:10+N],np.ones(N)*ax_rprof.get_ylim()[1]/4,c='xkcd:battleship grey',lw=5) #Visualize the sliding average window\n",
+    "\n",
+    "        if param2:\n",
+    "            p_ma2 = uniform_filter1d(uniform_filter1d(q[param2],size=N,axis=1),size=N,axis=1)\n",
+    "            ax_rprof2.plot(q['rho'][irhomin:irhomax], np.mean( p_ma2[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c2'],label=q['title'])\n",
+    "        \n",
+    "    ## Axes customizations\n",
+    "    ax_rprof.set_xlabel(r'$r/a$')\n",
+    "    ax_rprof.axhline(y=0,c='k',ls='--')\n",
+    "    ax_rprof.axvline(x=1,c='k',ls='--')\n",
+    "    ax_rprof.legend()\n",
+    "    if param2:\n",
+    "        ax_rprof2.yaxis.label.set_color(color2)\n",
+    "        ax_rprof2.tick_params(axis='y', colors=color2)\n",
     "\n",
     "    fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "    \n",
     "float_range_time_slider = widgets.FloatRangeSlider(value=[100e3, 145e3], min=0, max=150e3, step=1000, description='Time range', layout=Layout(width='50%'))\n",
-    "select_sim_widgets = widgets.SelectMultiple(options=[q['title'] for q in all_sim], value=[q['title'] for q in [qprof_05,qprof_15]], description='Simulations')\n",
+    "select_sim_widgets      = widgets.SelectMultiple(options=[q['title'] for q in all_sim], value=[q['title'] for q in [qprof_05,qprof_15]], description='Simulations')\n",
     "\n",
     "interact(update_plot, \n",
     "         N                = widgets.IntSlider(min=1, max=100, step=1,value=1),\n",
@@ -380,14 +362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "id": "8fdc5558",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1d4c9f2f8db41d9a29b70aca21f4e97",
+       "model_id": "4512e5eb53c444069e7ce96cc360831e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,7 +383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2779af8366524625b7253b1500372aea",
+       "model_id": "5e9f61fdf6054c0888d70797b0cb16be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -418,7 +400,7 @@
        "<function __main__.update_plot(N, dpi_adjust, param, select_sim, it_play, bool_fixed_y_range)>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
