--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 0,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7854088abb8f4375b8e82184e4acf7f6",
+       "model_id": "c566cff03cd84bab985cf61865bca66a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "850f0acab14641ea877d5055e2b82e7e",
+       "model_id": "069b7ffad4ce4c83a7d2f0d8135b11d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cc35e353b4c4aaea87ac3f99f91f325",
+       "model_id": "fc51d7aee7994660a72bce2f52b75e32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00ca3005d1184a9f852fe5cb5464e265",
+       "model_id": "a7b597fca3d24a67a36a64caf7b919c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -166,7 +166,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['As', 'Er', 'Gamma_vD', 'Gamma_vE', 'Gamma_vEn0', 'Gamma_vEndiff0', 'I', 'Isq', 'IturbGC_FSavg', 'P', 'P1', 'P2', 'Phi00', 'Phi01', 'Ppar', 'Pperp', 'Ptransfert', 'Ptransfert_approx', 'Ptransfert_vD', 'Ptransfert_vE', 'Qpar_vD', 'Qpar_vE', 'Qpar_vEn0', 'Qperp_vD', 'Qperp_vE', 'Qperp_vEn0', 'Qtot', 'Qtot_vD', 'Qtot_vE', 'Qtot_vEn0', 'RSphi', 'RSphi_vD', 'RSphi_vE', 'RSphi_vEn0', 'RSpol', 'RSpol_vD', 'RSpol_vE', 'RSpol_vEn0', 'T', 'VP', 'VT', 'Zs', 'dErdr', 'dErdt', 'dIdr', 'dIsqdr', 'dP1dt', 'dP2dt', 'dPdt', 'dPhi01dr', 'dRSphi_vDdr', 'dRSphi_vEdr', 'dRSphidr', 'dRSpol_vDdr', 'dRSpol_vEdr', 'dRSpoldr', 'dTdr', 'dVPdr', 'dVTdr', 'delta_n_avg', 'dndr', 'dndt', 'dvorticity1dt', 'dvorticity2dt', 'dvorticitydt', 'eps', 'n', 'nIturbGC_FSavg', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'spreading_0deg', 'spreading_180deg', 'spreading_270deg', 'spreading_90deg', 'spreading_FSavg', 'time', 'vorticity', 'vorticity1', 'vorticity2', 'title', 'c', 'ls', 'c2'])\n"
+      "(599, 512)\n",
+      "(599,)\n",
+      "dict_keys(['As', 'Er', 'Gamma_vD', 'Gamma_vE', 'Gamma_vEn0', 'Gamma_vEndiff0', 'I', 'Isq', 'IturbGC_FSavg', 'P', 'P1', 'P2', 'Phi00', 'Phi01', 'Ppar', 'Pperp', 'Ptransfert', 'Ptransfert_approx', 'Ptransfert_vD', 'Ptransfert_vE', 'Qpar_vD', 'Qpar_vE', 'Qpar_vEn0', 'Qperp_vD', 'Qperp_vE', 'Qperp_vEn0', 'Qtot', 'Qtot_vD', 'Qtot_vE', 'Qtot_vEn0', 'RSphi', 'RSphi_vD', 'RSphi_vE', 'RSphi_vEn0', 'RSpol', 'RSpol_vD', 'RSpol_vE', 'RSpol_vEn0', 'T', 'VP', 'VT', 'Zs', 'dErdr', 'dErdt', 'dIdr', 'dIsqdr', 'dP1dt', 'dP2dt', 'dPdt', 'dPhi01dr', 'dRSphi_vDdr', 'dRSphi_vEdr', 'dRSphidr', 'dRSpol_vDdr', 'dRSpol_vEdr', 'dRSpoldr', 'dTdr', 'dVPdr', 'dVTdr', 'delta_n_avg', 'dndr', 'dndt', 'dvorticity1dt', 'dvorticity2dt', 'dvorticitydt', 'eps', 'n', 'nIturbGC_FSavg', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'spreading_0deg', 'spreading_180deg', 'spreading_270deg', 'spreading_90deg', 'spreading_FSavg', 'time', 'vorticity', 'vorticity1', 'vorticity2', 'title', 'c', 'ls', 'c2', 'RSdia', 'RSpol_vE_from3D', 'RSpol_tot_from3D', 'dRSpol_tot_from3Ddr'])\n"
      ]
     }
    ],
@@ -226,6 +228,25 @@
     "    qprof_05_br_2ndphase['c']  = sns.color_palette(palette[0])[0]; qprof_05_br_2ndphase['c2']  = sns.color_palette(palette[3])[0]\n",
     "    qprof_075_br_2ndphase['c'] = sns.color_palette(palette[0])[1]; qprof_075_br_2ndphase['c2'] = sns.color_palette(palette[3])[1]\n",
     "    qprof_15_br_2ndphase['c']  = sns.color_palette(palette[0])[3]; qprof_15_br_2ndphase['c2']  = sns.color_palette(palette[3])[3]\n",
+    "\n",
+    "    qprof_05_br_2ndphase['RSdia']  = np.load('data/q05_RSdia_FSavg.npy')[:-1,:]\n",
+    "    qprof_075_br_2ndphase['RSdia'] = np.load('data/q075_RSdia_FSavg.npy')[:-1,:]\n",
+    "    qprof_15_br_2ndphase['RSdia']  = np.load('data/q15_RSdia_FSavg.npy')[:-1,:]\n",
+    "\n",
+    "    qprof_05_br_2ndphase['RSpol_vE_from3D']  = np.load('data/q05_RSelec_FSavg.npy')[:-1,:]\n",
+    "    qprof_075_br_2ndphase['RSpol_vE_from3D'] = np.load('data/q075_RSelec_FSavg.npy')[:-1,:]\n",
+    "    qprof_15_br_2ndphase['RSpol_vE_from3D']  = np.load('data/q15_RSelec_FSavg.npy')[:-1,:]\n",
+    "\n",
+    "    qprof_05_br_2ndphase['RSpol_tot_from3D'] = qprof_05_br_2ndphase['RSdia'] + qprof_05_br_2ndphase['RSpol_vE_from3D']\n",
+    "    qprof_075_br_2ndphase['RSpol_tot_from3D'] = qprof_075_br_2ndphase['RSdia'] + qprof_075_br_2ndphase['RSpol_vE_from3D']\n",
+    "    qprof_15_br_2ndphase['RSpol_tot_from3D'] = qprof_15_br_2ndphase['RSdia'] + qprof_15_br_2ndphase['RSpol_vE_from3D']\n",
+    "    \n",
+    "    qprof_05_br_2ndphase['dRSpol_tot_from3Ddr'] = np.gradient(qprof_05_br_2ndphase['RSpol_tot_from3D'],qprof_05_br_2ndphase['rg'],axis=1)\n",
+    "    qprof_075_br_2ndphase['dRSpol_tot_from3Ddr'] = np.gradient(qprof_075_br_2ndphase['RSpol_tot_from3D'],qprof_075_br_2ndphase['rg'],axis=1)\n",
+    "    qprof_15_br_2ndphase['dRSpol_tot_from3Ddr'] = np.gradient(qprof_15_br_2ndphase['RSpol_tot_from3D'],qprof_15_br_2ndphase['rg'],axis=1)\n",
+    "\n",
+    "    print(qprof_05_br_2ndphase['RSpol_vE_from3D'].shape)\n",
+    "    print(qprof_05_br_2ndphase['time'].shape)\n",
     "\n",
     "    all_sim.extend([qprof_05_br_2ndphase,qprof_075_br_2ndphase,qprof_15_br_2ndphase])\n",
     "\n",
@@ -336,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "280898b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1218e01030aa44e582d340d4eb8e01ae",
+       "model_id": "8611ec549dc24ca1bb9e46e01b6f45e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -357,7 +378,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7d8c3e21ee84b3fa793f51a2317364d",
+       "model_id": "e00ab37a4b4248df918aac77f195bf51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,7 +395,7 @@
        "<function __main__.update_plot(N, param, param2, float_range_time, select_sim, dpi_adjust)>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,14 +472,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "8fdc5558",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40ee4db4ca5a454386ec0906387c571d",
+       "model_id": "7bcb865510cd46e489fbcd8dacdea405",
        "version_major": 2,
        "version_minor": 0
       },
@@ -472,12 +493,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80b6d8f38b094e9a87f5e8f15a2b1a8e",
+       "model_id": "cf17241bedcb48fe931f2f1d217fe6d6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=1, continuous_update=False, description='N', min=1), IntSlider(value=100…"
+       "interactive(children=(IntSlider(value=5, continuous_update=False, description='N', min=1), IntSlider(value=100…"
       ]
      },
      "metadata": {},
@@ -489,7 +510,7 @@
        "<function __main__.update_plot(N, dpi_adjust, param, select_sim, it_play, bool_fixed_y_range)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2323,7 +2344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
