--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c566cff03cd84bab985cf61865bca66a",
+       "model_id": "3f3a0b87b1dc4ff4b3446f7c58219da5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "069b7ffad4ce4c83a7d2f0d8135b11d3",
+       "model_id": "b9db60921fd5479bbfc7eb9569a595d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc51d7aee7994660a72bce2f52b75e32",
+       "model_id": "6ee01588c94d4212a64f2d224203be7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7b597fca3d24a67a36a64caf7b919c0",
+       "model_id": "bc61b4d30e0645bbabb94bc3c244b01d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -166,9 +166,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(599, 512)\n",
-      "(599,)\n",
+      "(649, 512)\n",
+      "(636, 512)\n",
+      "(636,)\n",
       "dict_keys(['As', 'Er', 'Gamma_vD', 'Gamma_vE', 'Gamma_vEn0', 'Gamma_vEndiff0', 'I', 'Isq', 'IturbGC_FSavg', 'P', 'P1', 'P2', 'Phi00', 'Phi01', 'Ppar', 'Pperp', 'Ptransfert', 'Ptransfert_approx', 'Ptransfert_vD', 'Ptransfert_vE', 'Qpar_vD', 'Qpar_vE', 'Qpar_vEn0', 'Qperp_vD', 'Qperp_vE', 'Qperp_vEn0', 'Qtot', 'Qtot_vD', 'Qtot_vE', 'Qtot_vEn0', 'RSphi', 'RSphi_vD', 'RSphi_vE', 'RSphi_vEn0', 'RSpol', 'RSpol_vD', 'RSpol_vE', 'RSpol_vEn0', 'T', 'VP', 'VT', 'Zs', 'dErdr', 'dErdt', 'dIdr', 'dIsqdr', 'dP1dt', 'dP2dt', 'dPdt', 'dPhi01dr', 'dRSphi_vDdr', 'dRSphi_vEdr', 'dRSphidr', 'dRSpol_vDdr', 'dRSpol_vEdr', 'dRSpoldr', 'dTdr', 'dVPdr', 'dVTdr', 'delta_n_avg', 'dndr', 'dndt', 'dvorticity1dt', 'dvorticity2dt', 'dvorticitydt', 'eps', 'n', 'nIturbGC_FSavg', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'spreading_0deg', 'spreading_180deg', 'spreading_270deg', 'spreading_90deg', 'spreading_FSavg', 'time', 'vorticity', 'vorticity1', 'vorticity2', 'title', 'c', 'ls', 'c2', 'RSdia', 'RSpol_vE_from3D', 'RSpol_tot_from3D', 'dRSpol_tot_from3Ddr'])\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (649,512) (636,512) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-ce4a363a2b24>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0miq\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mq\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_sim\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     99\u001b[0m     \u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Ptransfert_w_prefactor'\u001b[0m\u001b[1;33m]\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'dRSpoldr'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Er'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'q'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 100\u001b[1;33m     \u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Ptransfert_withdia'\u001b[0m\u001b[1;33m]\u001b[0m      \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'dRSpol_tot_from3Ddr'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Er'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    101\u001b[0m     \u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Jr'\u001b[0m\u001b[1;33m]\u001b[0m                \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Gamma_vE'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Gamma_vD'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    102\u001b[0m     \u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Jr_vD'\u001b[0m\u001b[1;33m]\u001b[0m             \u001b[1;33m=\u001b[0m \u001b[0mq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Gamma_vD'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (649,512) (636,512) "
      ]
     }
    ],
@@ -245,8 +257,9 @@
     "    qprof_075_br_2ndphase['dRSpol_tot_from3Ddr'] = np.gradient(qprof_075_br_2ndphase['RSpol_tot_from3D'],qprof_075_br_2ndphase['rg'],axis=1)\n",
     "    qprof_15_br_2ndphase['dRSpol_tot_from3Ddr'] = np.gradient(qprof_15_br_2ndphase['RSpol_tot_from3D'],qprof_15_br_2ndphase['rg'],axis=1)\n",
     "\n",
-    "    print(qprof_05_br_2ndphase['RSpol_vE_from3D'].shape)\n",
-    "    print(qprof_05_br_2ndphase['time'].shape)\n",
+    "    print(qprof_075_br_2ndphase['dRSpol_tot_from3Ddr'].shape)\n",
+    "    print(qprof_075_br_2ndphase['Er'].shape)\n",
+    "    print(qprof_075_br_2ndphase['time'].shape)\n",
     "\n",
     "    all_sim.extend([qprof_05_br_2ndphase,qprof_075_br_2ndphase,qprof_15_br_2ndphase])\n",
     "\n",
@@ -271,6 +284,7 @@
     "## Defining custom values\n",
     "for iq,q in enumerate(all_sim):\n",
     "    q['Ptransfert_w_prefactor']  = -q['dRSpoldr'] * (-q['Er']) / (1 + 2 * q['q']**2)\n",
+    "    q['Ptransfert_withdia']      = -q['dRSpol_tot_from3Ddr'] * (-q['Er'])\n",
     "    q['Jr']                = (q['Gamma_vE']+q['Gamma_vD'])\n",
     "    q['Jr_vD']             = q['Gamma_vD']\n",
     "    q['Jr_vE']             = q['Gamma_vE']\n",
@@ -357,14 +371,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "280898b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8611ec549dc24ca1bb9e46e01b6f45e1",
+       "model_id": "c52aaea8e7fb46819ee4b40cc6646213",
        "version_major": 2,
        "version_minor": 0
       },
@@ -378,12 +392,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e00ab37a4b4248df918aac77f195bf51",
+       "model_id": "d6d2bbfa619a42f78c511b4a7b82d7f9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=1, continuous_update=False, description='N', min=1), Text(value='Er', co…"
+       "interactive(children=(IntSlider(value=1, continuous_update=False, description='N', min=1), Text(value='RSdia',…"
       ]
      },
      "metadata": {},
@@ -395,7 +409,7 @@
        "<function __main__.update_plot(N, param, param2, float_range_time, select_sim, dpi_adjust)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,9 +459,12 @@
     "    ax_rprof.axhline(y=0,c='k',ls='--')\n",
     "    ax_rprof.axvline(x=1,c='k',ls='--')\n",
     "    ax_rprof.legend()\n",
+    "    ax_rprof.set_ylim([min(ax_rprof.get_ylim()[0],ax_rprof2.get_ylim()[0]),max(ax_rprof.get_ylim()[1],ax_rprof2.get_ylim()[1])])\n",
     "    if param2:\n",
     "        ax_rprof2.yaxis.label.set_color(color2)\n",
     "        ax_rprof2.tick_params(axis='y', colors=color2)\n",
+    "        ## Set sale y limit for both axes\n",
+    "        ax_rprof2.set_ylim([min(ax_rprof.get_ylim()[0],ax_rprof2.get_ylim()[0]),max(ax_rprof.get_ylim()[1],ax_rprof2.get_ylim()[1])])\n",
     "    ax_rprof.plot(q['rho'][10:10+N],np.ones(N)*ax_rprof.get_ylim()[1]/4,c='xkcd:battleship grey',lw=5) #Visualize the sliding average window\n",
     "\n",
     "    fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
@@ -2344,7 +2361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
