--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30209815f2e846399454caa0c02922b4",
+       "model_id": "51f8b0655d464421a19b2c4aec01896f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59f74195074a4f0fb91409e195f5be58",
+       "model_id": "f1477ad430134c018a21e142b95bb17d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bcf7db4399a487a99ae9a384a36a2b9",
+       "model_id": "3a3b7d877f174bb697e30b6e751a26ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffc38ebef46c460888dc68e0e2d24803",
+       "model_id": "6b858649aec84d55b6f082992da292c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +124,7 @@
     "\n",
     "#Size of figures\n",
     "dpi_laptop = 50; dpi_cadarache = 65; dpi_home = 100\n",
-    "dpi_custom = dpi_home\n",
+    "dpi_custom = dpi_laptop\n",
     "\n",
     "## Set colors\n",
     "import seaborn as sns\n",
@@ -333,6 +333,7 @@
     "    - [Profil radial des termes dans l'équation d'évolution de l'énergie](#en_cours_rprof_energy_evo_terms)\n",
     "    - [Conservation de la vorticité généralisée](#en_cours_cons_vorticity)\n",
     "    - [Conservation de la vorticité généralisée - Corrigé](#en_cours_cons_vorticity_corrected)\n",
+    "    - [Conservation de la vorticité généralisée - Autre notation](#en_cours_cons_vorticity_different_notation)\n",
     "    - [Conservation de la vorticité (avec tenseur diamagnétique)](#en_cours_cons_vorticity_withdia)\n",
     "    - [Estimation de $\\nu_\\theta$](#en_cours_estimation_nutheta)\n",
     "    - [Profils amplitude GAMs et ZFs](#en_cours_profile_amplitude_GAMs_ZFs)\n",
@@ -442,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "8fdc5558",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94b34a01bc2b474cabce5aec02588f91",
+       "model_id": "7665b4381f54482189268c03bd3a0023",
        "version_major": 2,
        "version_minor": 0
       },
@@ -463,7 +464,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c40c8a710de4a1992c2d50d71f01ce7",
+       "model_id": "a2f4bb8e02e44299835b9c75f0f7e0f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -480,7 +481,7 @@
        "<function __main__.update_plot(N, dpi_adjust, param, select_sim, float_range_rho, it_play, time_slider, bool_fixed_y_range, coef_ylim)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,19 +1449,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "c2a25821",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8bc71e73dbb4737b4ad934029481501",
+       "model_id": "f99a9eb8198440b4ba9f1416533d2835",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=100, continuous_update=False, description='dpi_adjust', max=200, min=30)…"
+       "interactive(children=(IntSlider(value=50, continuous_update=False, description='dpi_adjust', max=200, min=30),…"
       ]
      },
      "metadata": {},
@@ -1472,7 +1473,7 @@
        "<function __main__.update_plot(dpi_adjust, float_time, float_range_rho, select_sim, vorticity_bool, vorticity_bool_corrected, current_bool, density_bool, coef_adjust, same_y_range)>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,6 +1559,110 @@
     "         density_bool   = widgets.Checkbox(value=False,description='Display density term'),\n",
     "         same_y_range   = widgets.Checkbox(value=True,description='Same y range'),\n",
     "         coef_adjust    = coef_adjust,\n",
+    "         **custom_widgets\n",
+    "        )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5319d217",
+   "metadata": {},
+   "source": [
+    "<a id='en_cours_cons_vorticity_different_notation'></a>\n",
+    "## <font color='coral'>**Travail en cours**</font> - Conservation de la vorticité généralisée - Autre expression[▲](#sommaire)\n",
+    "\n",
+    "On peut également écrire l'équation de vorticité intégrée comme\n",
+    "\n",
+    "$\\partial_t(\\langle n_G \\rangle_{FS} + \\langle \\nabla_\\perp P_\\perp \\rangle_{FS}) + \\langle J_r \\rangle_{FS} = 0$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cf06c1d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cd8317eff6e84ea88ff5eaa26da91a33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=50, continuous_update=False, description='dpi_adjust', max=200, min=30),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(dpi_adjust, float_time, float_range_rho, select_sim, same_y_range)>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.close('all')\n",
+    "\n",
+    "def update_plot(dpi_adjust,float_time,float_range_rho,select_sim,same_y_range):\n",
+    "    \n",
+    "    plt.close('all')\n",
+    "    clear_output\n",
+    "\n",
+    "    q_ar = [q for q in all_sim if q['title'] in select_sim]\n",
+    "    \n",
+    "    fig = plt.figure(figsize=(16,8*len(q_ar)))\n",
+    "\n",
+    "    tscan = float_time\n",
+    "    rhomin,rhomax = float_range_rho\n",
+    "\n",
+    "    fig.suptitle('Time : %.0f' % (tscan) + r' $[\\omega_{c0}^{-1}]$')\n",
+    "\n",
+    "    ## Set dpi of figure\n",
+    "    if dpi_adjust!=dpi_custom:fig.set_dpi(dpi_adjust)\n",
+    "    \n",
+    "    for iq,q in enumerate(q_ar):\n",
+    "\n",
+    "        ax_rprof = fig.add_subplot(len(q_ar),1,iq+1)\n",
+    "\n",
+    "        irhomin, irhomax = np.searchsorted(q['rho'],[rhomin,rhomax])\n",
+    "        \n",
+    "        itscan = np.searchsorted(q['time'],tscan)\n",
+    "\n",
+    "        dt_vorticity_int = np.gradient(q['n'] + q['divPperp'], q['time'],axis=0)\n",
+    "        #dt_vorticity_int = np.gradient( q['P'] , q['time'],axis=0)\n",
+    "        current = q['Jr']\n",
+    "\n",
+    "        ax_rprof.set_title(q['title'] + ' - Vorticity')\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], -current[itscan,irhomin:irhomax],c='b',label=r'$\\langle J_r \\rangle$')\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], dt_vorticity_int[itscan,irhomin:irhomax],c='g',label=r'$\\partial_t \\langle \\Omega \\rangle$')\n",
+    "\n",
+    "        if same_y_range:ax_rprof.set_ylim(-4e-6,4e-6)\n",
+    "\n",
+    "        for axes in [ax_rprof]:\n",
+    "            axes.set_xlabel(r'$r/a$')\n",
+    "            axes.axhline(y=0,c='k',ls='--')\n",
+    "            axes.axvline(x=1,c='k',ls='--')\n",
+    "            if iq==0:axes.legend()\n",
+    "\n",
+    "    fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
+    "    \n",
+    "float_time_slider  = widgets.FloatSlider(value=90e3, min=0, max=200e3, step=1000, description='Time range', layout=Layout(width='50%'), style = {'description_width': 'initial'}, continuous_update=False)\n",
+    "float_range_rho_slider  = widgets.FloatRangeSlider(value=[0.1, 1], min=0, max=1.2, step=0.05, description='Normalized radius range', layout=Layout(width='50%'), style = {'description_width': 'initial'}, continuous_update=False)\n",
+    "\n",
+    "coef_test  = widgets.FloatSlider(value=1.1, min=1e3, max=1e5, step=100, description='Coef adjust', layout=Layout(width='50%'), style = {'description_width': 'initial'}, continuous_update=False)\n",
+    "\n",
+    "interact(update_plot, \n",
+    "         float_time     = float_time_slider,\n",
+    "         float_range_rho  = float_range_rho_slider,\n",
+    "         same_y_range   = widgets.Checkbox(value=True,description='Same y range'),\n",
     "         **custom_widgets\n",
     "        )"
    ]
@@ -1952,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f361416e-79af-482b-a88e-20b7d748847e",
    "metadata": {
     "colab": {
@@ -1970,10 +2075,26 @@
     "outputId": "e1de46bd-dde5-4365-dc0a-74644c15adef",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2974bac66f27441ca1962a507c556e58",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plt.rc('font',size=20)\n",
-    "q_ar = [qprof_05,qprof_1,qprof_15]\n",
+    "#q_ar = [qprof_05,qprof_1,qprof_15]\n",
+    "q_ar = all_sim\n",
     "\n",
     "fig = plt.figure(figsize=(8,8))\n",
     "ax1 = fig.add_subplot(111)\n",
@@ -2378,7 +2499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6081a227-27fb-4d69-8194-66c6339a4189",
    "metadata": {
     "colab": {
@@ -2395,11 +2516,28 @@
     "outputId": "743c03c8-3df1-436b-8ee4-b0da5eeb3e58",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a912377c6794c2da68af848b3cc7057",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plt.rcParams['axes.formatter.limits'] = (-5,6)\n",
     "plt.rc('font',size=20)\n",
-    "q_ar = [qprof_05,qprof_1,qprof_15]\n",
+    "#q_ar = [qprof_05,qprof_1,qprof_15]\n",
+    "\n",
+    "q_ar = all_sim\n",
     "\n",
     "fig = plt.figure(figsize=(8,8))\n",
     "ax1 = fig.add_subplot(111)\n",
@@ -2409,7 +2547,7 @@
     "    irhomin, irhomax = np.searchsorted(q['rho'],[0.2,1.0])\n",
     "    itmin, itmax     = np.searchsorted(q['time'],[100.0e3,145.0e3])\n",
     "\n",
-    "    ax1.plot(q['rho'][irhomin:irhomax], np.sqrt(np.mean( (q['turb_int_sq_avg'])[itmin:itmax,irhomin:irhomax],axis=0)),ls=q['ls'],c=q['c'],lw=4,label=q['title'],marker=q['marker'],markevery=me)\n",
+    "    ax1.plot(q['rho'][irhomin:irhomax], np.sqrt(np.mean( (q['Isq'])[itmin:itmax,irhomin:irhomax],axis=0)),ls=q['ls'],c=q['c'],lw=4,label=q['title'],marker=q['marker'],markevery=me)\n",
     "\n",
     "    ax1.axhline(y=0,ls='--',c='k')\n",
     "\n",
